syntax = "proto3";

package com.bonfire.cache;

option java_multiple_files = true;
option java_package = "com.bonfire.cache";
option java_outer_classname = "FileUploadEntry";

message FileUploadEntry {
  string upload_key = 1;
  string file_id = 2;
  int64 initiator = 3;
  bool ready = 4;
}
